--- a/index.html
+++ b/index.html
@@ -682,12 +682,12 @@
                         <strong>Best For:</strong> Those working on nationally important projects<br>
                         <strong>Key Advantage:</strong> Self-petitioned, lower bar than EB-1A</p>
                     </div>
-                    <div class="criteria-item">
+<!--                     <div class="criteria-item">
                         <h4>🔬 EB-1B (Outstanding Researcher)</h4>
                         <p><strong>Timeline:</strong> Immediate (current priority dates)<br>
                         <strong>Best For:</strong> Researchers with strong publication record<br>
                         <strong>Key Advantage:</strong> Employer-sponsored but you can influence the petition</p>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div class="warning">
