--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                 <div class="timeline">
                     <div class="timeline-item">
                         <h4>You Control Your Story</h4>
-                        <p>Write your own petition, highlight your strengths, and address potential weaknesses. No lawyer or employer can tell your story better than you can.</p>
+                        <p>Write your own petition, highlight your strengths, and address potential weaknesses. No employer can tell your story better than you can.</p>
                     </div>
                     <div class="timeline-item">
                         <h4>No Employer Dependency</h4>
@@ -750,8 +750,8 @@
                         <p>Reality: Software engineers, data scientists, and industry professionals regularly get approved by focusing on industry impact.</p>
                     </div>
                     <div class="timeline-item">
-                        <h4>Myth: You Must Use a Lawyer</h4>
-                        <p>Reality: Many successful applicants self-file. You know your profile better than anyone else - lawyers often outsource the real work anyway.</p>
+                        <h4>Myth: A great lawyer will gurantee you a Greencard</h4>
+                        <p>Reality: Many successful applicants self-petition You know your profile better than anyone else. A great lawyer will acknowledge this, and spend lot of time with you building your application TOGETHER with you. </p>
                     </div>
                 </div>
             </div>
