--- a/index.html
+++ b/index.html
@@ -863,8 +863,8 @@
                 <div class="checklist-item">
                     <div class="checklist-checkbox" onclick="toggleCheck(this)"></div>
                     <div>
-                        <h4>9. Leading/Critical Role for Distinguished Organizations</h4>
-                        <p><strong>Two-Part Test:</strong> Prove your role was critical AND the organization is distinguished. Use funding, client roster, industry recognition.</p>
+                        <h4>9. Evidence of your commercial successes in the performing arts</h4>
+                        <p>Data: Viewership / listners / downloads / subscribers </p>
                     </div>
                 </div>
 
